<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sleepQualityViewModel"
            type="com.sleeptrack.main.recordsleep.RecordSleepViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundBody"
        tools:context=".main.recordsleep.RecordSleepFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:elevation="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_was_hour_sleep"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    app:layout_constraintBottom_toTopOf="@+id/quality_three_image"
                    app:layout_constraintTop_toTopOf="@+id/quality_three_image">

                    <ImageView
                        android:id="@+id/quality_zero_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:contentDescription="@string/quality_0"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(0)}"
                        app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_sleep_0"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/quality_one_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/quality_1"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(1)}"
                        app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
                        app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
                        app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
                        app:srcCompat="@drawable/ic_sleep_1" />

                    <ImageView
                        android:id="@+id/quality_two_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/margin"
                        android:contentDescription="@string/quality_2"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(2)}"
                        app:layout_constraintBottom_toBottomOf="@+id/quality_one_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/quality_one_image"
                        app:srcCompat="@drawable/ic_sleep_2" />

                    <ImageView
                        android:id="@+id/quality_three_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_marginBottom="@dimen/margin"
                        android:contentDescription="@string/quality_3"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(3)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/ic_sleep_3" />

                    <ImageView
                        android:id="@+id/quality_four_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/quality_4"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(4)}"
                        app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
                        app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
                        app:layout_constraintStart_toEndOf="@+id/quality_three_image"
                        app:layout_constraintTop_toTopOf="@+id/quality_three_image"
                        app:srcCompat="@drawable/ic_sleep_4" />

                    <ImageView
                        android:id="@+id/quality_five_image"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/margin"
                        android:contentDescription="@string/quality_5"
                        android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(5)}"
                        app:layout_constraintBottom_toBottomOf="@+id/quality_four_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/quality_four_image"
                        app:layout_constraintTop_toTopOf="@+id/quality_four_image"
                        app:srcCompat="@drawable/ic_sleep_5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_rounded_blue_border"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <EditText
                        android:id="@+id/feedback"
                        app:queryBackground="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Write a feedback"
                        app:iconifiedByDefault="false"
                        android:gravity="start|left"
                        android:padding="8dp"
                        android:inputType="textMultiLine"
                        android:minLines="5"
                        android:maxLines="50"
                        android:text=""
                        android:textSize="14sp"></EditText>

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/secondaryColor"
                    android:elevation="10dp"
                    android:text="Save Sleep Record"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:cornerRadius="8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>